@@ -1,6 +1,9 @@
 Changes since version 1.5.1
 ---------------------------
 
+- Fixed bug in slice2java: with the --impl-tie option, incorrect
+  code was generated for local interfaces and classes.
+
 - Changed code generation in slice2java: for local interfaces,
   only an OperationsNC (but no Operations) interface is generated
   now. (Previously, both interfaces were generated, with one of
